@@ -107,11 +107,11 @@ CREATE TABLE `identities` (
  `del` tinyint(1) NOT NULL DEFAULT '0',
  `standard` tinyint(1) NOT NULL DEFAULT '0',
  `name` varchar(128) NOT NULL,
- `organization` varchar(128) NOT NULL,
+ `organization` varchar(128) NOT NULL DEFAULT '',
  `email` varchar(128) NOT NULL,
- `reply-to` varchar(128) NOT NULL,
- `bcc` varchar(128) NOT NULL,
- `signature` text NOT NULL,
+ `reply-to` varchar(128) NOT NULL DEFAULT '',
+ `bcc` varchar(128) NOT NULL DEFAULT '',
+ `signature` text NOT NULL DEFAULT '',
  `html_signature` tinyint(1) NOT NULL DEFAULT '0',
  `user_id` int(10) UNSIGNED NOT NULL DEFAULT '0',
  PRIMARY KEY(`identity_id`),
